--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: areavoices
+Theme Name: AreaVoices
 Theme URI: http://underscores.me/
 Author: Julie Kuehl
 Author URI: http://juliekuehl.com
