style header tag update

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*!
 Theme Name: AreaVoices
-Theme URI: http://underscores.me/
-Author: Julie Kuehl
-Author URI: http://juliekuehl.com
-Description: A kick-ass custom WordPress theme built for Area Voices.
-Version: 1.0.0
+Theme URI: http://areavoices.com/
+Author: Forum Communications Company
+Author URI: http://forumcomm.com/
+Description: The kick-ass custom WordPress theme built for AreaVoices contributors.
+Version: 1.0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: areavoices
