--- a/css/style-1-default.css
+++ b/css/style-1-default.css
@@ -387,8 +387,8 @@ input[type="text"] {
     border-bottom: 3px solid #e3e3e3;
 }
 
-.comment-navigation .nav-previous, .posts-navigation .nav-previous, 
-.post-navigation .nav-previous, .comment-navigation .nav-next, 
+.comment-navigation .nav-previous, .posts-navigation .nav-previous,
+.post-navigation .nav-previous, .comment-navigation .nav-next,
 .posts-navigation .nav-next, .post-navigation .nav-next
 {
     padding: 1em 2em;
@@ -396,11 +396,62 @@ input[type="text"] {
     overflow: hidden;
 }
 
+/* --------- ZILLA LIKES ---------- */
 
+.zilla-likes,
+.zilla-likes.active,
+.zilla-likes:hover{
+  float: right;
+  line-height: 1;
+  text-align: center;
+  font-size: 16px;
+}
 
+.zilla-likes:before{ color: #b4b4b4; }
+.zilla-likes:hover,
+.zilla-likes.active:before{ color: #4c4c4c; }
 
+.zilla-likes,
+.zilla-likes.active,
+.zilla-likes:hover{
+  font-size: 16px;
+  margin-top: 12px !important;
+  margin-bottom: 0px !important;
+	padding: 0px !important;
+  background: none !important;
+}
+.zilla-likes:before {
+  content: "\e291";
+  font-family: avicons;
+	display: block;
+  font-size: 21px;
+  margin-bottom: 8px;
 
+}
 
+/*----------- POPULAR POSTS WIDGET --------------*/
+
+#popular-posts-header { margin-top: 0px; margin-bottom: 30px; }
+
+.recent-post-widget{ margin-bottom: 25px; text-align: left; }
+.recent-post-widget:last-child{ margin-bottom: 0px; }
+
+.recent-post-widget .recent-post-widget-thumbnail img{ display: block; margin: 0px auto; }
+.recent-post-widget .recent-post-widget-thumbnail { max-width: 70px; float: left; margin-right: 20px; margin-bottom: 20px; }
+
+.recent-post-widget .recent-post-widget-title{ font-family: Merriweather; font-size: 14px; font-weight: bold; margin-top: 2px; margin-bottom: 6px; }
+
+.recent-post-widget .recent-post-widget-info{ line-height: 22px; }
+.recent-post-widget .recent-post-widget-info i{ font-size: 15px; margin-right: 9px; }
+.recent-post-widget .recent-post-widget-info .gdlr-seperator{ display: none; }
+
+.recent-post-widget .recent-post-widget-content{ overflow: hidden; line-height: 18.2px; margin-top: 5px; }
+/*
+.recent-post-widget .recent-post-widget-content{ border-bottom: 1px solid #d9d9d9; }
+.blog-info.blog-comment{ margin-bottom: 4px; }
+*/
+
+.recent-post-widget .excerpt-read-more{ display: none; }
 
 /*-----------MEDIA QUERIES---------------*/
 
