AVicons css update

--- a/css/style-1-default.css
+++ b/css/style-1-default.css
@@ -70,8 +70,6 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-
-
 h1 a:link {
   color: #3d3d3d !important;
 }
@@ -95,6 +93,14 @@ color: #333 !important;
   font-size: 15px; /*RV | Was 32px (2em) | Temporary, fix */
 }
 
+.avicon-av-calendar, .avicon-person, .avicon-folder { /*RV*/
+  font-size: 20px !important;
+  margin-top: 3px !important;
+  margin-right: 3px;
+  color: #C1C1C1 !important;
+  vertical-align: top;
+  display: inline-block;
+}
 
 span.dashicons.dashicons-admin-users, span.dashicons.dashicons-category, span.dashicons.dashicons-calendar-alt {
   color: #C1C1C1 !important;
