--- a/css/style-1-default.css
+++ b/css/style-1-default.css
@@ -402,6 +402,13 @@ input[type="text"] {
     overflow: hidden;
 }
 
+.nav-next, .nav-previous {
+  background-color:transparent !important;
+  width: 100% !important;
+  padding: 0px !important;
+  font-size: 15px !important;
+}
+
 .av-pagination
 {
   text-align: center;
