--- a/css/style-1-default.css
+++ b/css/style-1-default.css
@@ -199,16 +199,6 @@ aside {
   vertical-align: text-top !important;
 }
 
-
-/*-----------SINGLE ARTICLE-----------*/
-
-
-article.av-single-post
-{
-  margin-bottom: 0px;
-  border-bottom: none;
-}
-
 /*-----------ABOUT WIDGET-------------*/
 
 h1.aboutme_title {
@@ -303,7 +293,7 @@ p.aboutme_description {
 }
 input[type="submit"] {
   outline-offset: -7px;
-  background-color: transparent !important;
+	background-color: transparent !important;
 }
 .av-nav-search-form {
     background-color: #272727;
@@ -404,11 +394,19 @@ input[type="text"] {
 }
 
 .comment-navigation .nav-previous, .posts-navigation .nav-previous,
- .comment-navigation .nav-next, .posts-navigation .nav-next
+.post-navigation .nav-previous, .comment-navigation .nav-next,
+.posts-navigation .nav-next, .post-navigation .nav-next
 {
     padding: 1em 2em;
     background-color: #ebebeb;
     overflow: hidden;
+}
+
+.nav-next, .nav-previous {
+  background-color:transparent !important;
+  width: 100% !important;
+  padding: 0px !important;
+  font-size: 15px !important;
 }
 
 .av-pagination
@@ -434,67 +432,26 @@ input[type="text"] {
   margin-right: 0px;
 }
 
-/*---------SINGLE PAGE NAV---------*/
-
-.site-main .post-navigation{
-  margin:0px;
-  background-color: #fff;
-  padding: 0em 2em;
-  padding-bottom: 1.5em;
+/* --------- JETPACK SOCIAL SHARING ---------- */
+.av-home.av-jp-social .sd-title {
+  display: none;
+}
+.av-home.av-jp-social .sd-content {
+  margin-top: 30px;
+}
+.av-home.av-jp-social .sharing-anchor.sd-button.share-more {
+  display: none !important;
 }
 
-.post-navigation .nav-links
-{
-  border-top: 3px solid #454545;
-  padding-top: 60px;
+.av-home.av-jp-social .share-facebook a.sd-button,
+.av-home.av-jp-social .share-twitter a.sd-button,
+.av-home.av-jp-social .share-google-plus-1 a.sd-button,
+.av-home.av-jp-social .share-pinterest a.sd-button,
+.av-home.av-jp-social .share-reddit a.sd-button {
+  background: #e9e9e9 !important;
 }
-
-.post-navigation .nav-previous, .post-navigation .nav-next
-{
-  background-color: #fff;
-  overflow: hidden;
-}
-.post-navigation .nav-previous
-{
-  width: 90%;
-  float: left;
-  padding: 0px;
-}
-.post-navigation .nav-next
-{
-  width: 90%;
-  float: right;
-  text-align: right;
-  padding: 0px;
-}
-
-
-/*------------COMMENTS--------------*/
-
-.comment-reply-title{
-  margin-top: 0px;
-  padding-top: 30px;
-}
-
-.comments-area{
-  background-color: #fff;
-  border-bottom: 3px solid #e3e3e3;
-  padding: 1em 2em;
-  margin-bottom: 30px;
-}
-
-.comment-respond .comment-reply-title, .comments-title
-{
-  font-size: 15px;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-bottom: 32px;
-    padding-bottom: 5px;
-    display: inline-block;
-    border-bottom-width: 2px;
-    border-bottom-style: solid;
-    letter-spacing: 2px;
-        font-family: "Merriweather";
+.av-home.av-jp-social .share-reddit a.sd-button:before { /*RV | Fix This */
+  color: #fff !important;
 }
 
 /* --------- ZILLA LIKES ---------- */
@@ -519,13 +476,13 @@ input[type="text"] {
   font-size: 16px;
   margin-top: 12px !important;
   margin-bottom: 0px !important;
-  padding: 0px !important;
+	padding: 0px !important;
   background: none !important;
 }
-.entry-content .zilla-likes.visit:before {
+.entry-content .zilla-likes:before {
   content: "\e291";
   font-family: avicons;
-  display: block;
+	display: block;
   font-size: 21px;
   margin-bottom: 8px;
   color: #red !important;
@@ -545,7 +502,6 @@ input[type="text"] {
 }
 .entry-meta .zilla-likes-count {
   font-size: 14px !important;
-  vertical-align: 10% !important;
 }
 
 
@@ -576,18 +532,18 @@ input[type="text"] {
 /*-----------MEDIA QUERIES---------------*/
 
 @media only screen and (max-width: 380px) {
-  .site-title {
-    font-size: 3em;
-  }
+	.site-title {
+		font-size: 3em;
+	}
   .site-description {
     font-size: 1.75em;
   }
 }
 
 @media only screen and (max-width: 340px) {
-  .site-title {
-    font-size: 2.75em;
-  }
+	.site-title {
+		font-size: 2.75em;
+	}
   .site-description {
     font-size: 1.5em;
   }
