--- a/css/style-1-default.css
+++ b/css/style-1-default.css
@@ -496,6 +496,58 @@ input[type="text"] {
         font-family: "Merriweather";
 }
 
+.comment-article{
+  overflow: auto;
+  border: none;
+}
+
+ol.comment-list{
+  margin-left: 0;
+  list-style: none;
+}
+
+.comment-avatar{
+  float: left;
+}
+
+.comment-avatar img{
+  border-radius: 50%;
+}
+
+.comment-body{
+  float: right;
+  width: 85%;
+  background-color: #f5f5f5;
+  padding: 2em;
+}
+
+.comment-author{
+  float:left;
+  font-weight: 900;
+  font-size: 15px;
+}
+.comment-reply{
+  float: right;
+  font-size: 13px;
+}
+
+.comment-body .edit-link
+{
+float: left;
+font-size: 15px;
+margin-top: 5px;
+}
+
+.comment-content p {
+  margin-top: 3em;
+  font-size: 15px;
+}
+
+.comment-time{
+  font-style: italic;
+  font-size: 13px;
+}
+
 /* --------- JETPACK SOCIAL SHARING ---------- */
 .av-home.av-jp-social .sd-title {
   display: none;
@@ -601,6 +653,16 @@ input[type="text"] {
   }
   .site-description {
     font-size: 1.75em;
+  }
+  .comment-list{
+    padding-left: 0px;
+  }
+  .comment-article
+  {
+    padding: 0;
+  }
+  .comment-body{
+    width: 100%;
   }
 }
 
