--- a/css/avicons.css
+++ b/css/avicons.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'avicons';
-	src:url('fonts/avicons.eot?q6rgcl');
-	src:url('fonts/avicons.eot?q6rgcl#iefix') format('embedded-opentype'),
-		url('fonts/avicons.ttf?q6rgcl') format('truetype'),
-		url('fonts/avicons.woff?q6rgcl') format('woff'),
-		url('fonts/avicons.svg?q6rgcl#avicons') format('svg');
+	src:url('fonts/avicons.eot?ajmpsr');
+	src:url('fonts/avicons.eot?ajmpsr#iefix') format('embedded-opentype'),
+		url('fonts/avicons.ttf?ajmpsr') format('truetype'),
+		url('fonts/avicons.woff?ajmpsr') format('woff'),
+		url('fonts/avicons.svg?ajmpsr#avicons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -86,8 +86,23 @@
 .avicon-pinterest:before {
 	content: "\e804";
 }
+.avicon-chevron-with-circle-left:before {
+	content: "\e806";
+}
+.avicon-arrow-long-left:before {
+	content: "\e807";
+}
+.avicon-chevron-with-circle-right:before {
+	content: "\e808";
+}
+.avicon-arrow-long-right:before {
+	content: "\e809";
+}
 .avicon-instagram-with-circle:before {
 	content: "\e805";
+}
+.avicon-email:before {
+	content: "\e04c";
 }
 .avicon-email:before {
 	content: "\e04c";
@@ -185,3 +200,4 @@
 .avicon-heart2:before {
 	content: "\e613";
 }
+
