--- a/style.css
+++ b/style.css
@@ -893,3 +893,22 @@ object {
 @media only screen and (max-width: 419px) {
   body .container {
     max-width: 395px; } }
+
+
+/*--------------------------------------------------------------
+# CUSTOM (RV)
+--------------------------------------------------------------*/
+
+.page-header-row {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.page-title {
+    margin: 0px;
+    text-align: center;
+    font-family: Arvo;
+    font-weight: 300;
+    font-size: 1em !important;
+    text-transform: uppercase;
+}
