Jetpack Social Sharing Icons - Front Page Style

--- a/style.css
+++ b/style.css
@@ -899,6 +899,7 @@ object {
 # CUSTOM (RV)
 --------------------------------------------------------------*/
 
+/* 404.php */
 .page-header-row {
     width: 50%;
     margin: 0 auto;
