--- a/css/style-1-default.css
+++ b/css/style-1-default.css
@@ -744,6 +744,50 @@ margin-top: 5px;
 {
   height: 225px;
   margin-bottom: 30px;
+  position: relative;
+}
+
+.recent-post-widget-link {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0.0;
+background: rgba(0, 0, 0, 0.6);
+z-index: 10;
+-webkit-transition: opacity 300ms ease; /* Safari and Chrome */
+    -moz-transition: opacity 300ms ease; /* Firefox */
+    -o-transition: opacity 300ms ease; /* IE 9 */
+    -ms-transition: opacity 300ms ease; /* Opera */
+    transition: opacity 300ms ease;
+    text-align: center;
+
+}
+
+.recent-post-widget-thumbnail:hover .recent-post-widget-link{
+  opacity: 1;
+  -webkit-transition: opacity 300ms ease; /* Safari and Chrome */
+    -moz-transition: opacity 300ms ease; /* Firefox */
+    -o-transition: opacity 300ms ease; /* IE 9 */
+    -ms-transition: opacity 300ms ease; /* Opera */
+    transition: opacity 300ms ease;
+}
+
+.recent-post-widget-more{
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 80px;
+  font-size: 28px;
+  
+  border: 3px solid #fff;
+  padding: 0 15px;
+  color: #fff;
+  font-family: 'Oswald', sans-serif;
+}
+
+.recent-post-widget-more:hover{
+background-color: #fff;
+color: #000;
 }
 
 .recent-post-widget-content{
