image caption style added

--- a/css/style-1-default.css
+++ b/css/style-1-default.css
@@ -138,6 +138,20 @@ a {
   color: #2d6cea;
   text-decoration: none; }
 
+.wp-caption{
+  background: #fff;
+    border: 1px solid #ebebeb;
+    max-width: 96%;
+    padding: 5px 5px 10px;
+    text-align: center;
+}
+
+.wp-caption .wp-caption-text{
+  margin: 0;
+  font-size: 12px;
+  color: #383838;
+}
+
 ul, ol {
   margin-left: 0;
   margin-right: 0;
