--- a/css/style-1-default.css
+++ b/css/style-1-default.css
@@ -302,7 +302,7 @@ img{
   font-size: 28px;
   margin-right: 10px;
   color: #383838;
-  
+
 }
 
 .blockquote{
@@ -746,7 +746,7 @@ margin-top: 5px;
 }
 
 .av-home.av-jp-social a.sd-button:before {
-    font: 400 26px/1 Genericons !important;
+    font: 400 26px/1 Genericons;
 }
 
 
@@ -763,7 +763,7 @@ margin-top: 5px;
   font-size: 16px;
 }
 
-.entry-content .zilla-likes:before{ color: #b4b4b4; }
+/*.entry-content .zilla-likes:before{ color: #b4b4b4; }*/
 .entry-content .zilla-likes:hover,
 .entry-content .zilla-likes.active:before{ color: #4c4c4c; }
 
@@ -866,7 +866,7 @@ z-index: 10;
   margin-right: auto;
   margin-top: 80px;
   font-size: 28px;
-  
+
   border: 3px solid #fff;
   padding: 0 15px;
   color: #fff;
@@ -890,7 +890,7 @@ background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 61%,rgb
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#bf000000',GradientType=0 ); /* IE6-9 */
     color: #fff;
     position: relative;
-    
+
 }
 
 .recent-post-widget-content{
