--- a/style.css
+++ b/style.css
@@ -758,7 +758,7 @@ input.search-field {
 --------------------------------------------------------------*/
 .site-header {
   font-family: "AvenirNextW10Demi" !important; /*RV*/
-  background-color: #289fba;
+  background-color: #ffffff;
   padding-bottom: 1em;
   padding-top: 0.5em;
   position: relative;
