--- a/style.css
+++ b/style.css
@@ -989,6 +989,65 @@ object {
 
 }
 
+/*--------------------------------------------------------------
+# RECENT COMMENTS
+--------------------------------------------------------------*/
+
+.recent-comment-widget{
+  padding: 15px 10px;
+  
+  box-sizing: border-box;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #eee;
+  
+  
+}
+
+.recent-comment-widget-title{
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 0.8em;
+}
+
+.recent-comment-widget-info{
+  color: #999;
+  font-size: 0.8em;
+  font-weight: 900;
+}
+
+.recent-comment-widget-excerpt{
+font-size: 0.9em;
+}
+
+.av-recent-comment-widget div:nth-last-of-type(2){
+  border-bottom: none;
+}
+
+.recent-comment-widget.av-post-author {
+background-color: #f7f7f7;
+}
+
+.recent-comment-widget-thumbnail{
+  float: left;
+  display: inline-block;
+  max-width: 19%;
+  
+}
+
+.recent-comment-widget-thumbnail img {
+  border-radius: 50%;
+  
+
+}
+
+.recent-comment-widget-content{
+  float: left;
+  display: inline-block;
+  width: 80%;
+  padding-left: 15px;
+  box-sizing: border-box;
+}
 
 /*--------------------------------------------------------------
 # CUSTOM (RV)
