--- a/style.css
+++ b/style.css
@@ -293,6 +293,9 @@ h1, h2, h3, h4, h5, h6 {
   h1 p, h2 p, h3 p, h4 p, h5 p, h6 p {
     font-family: 'Merriweather' !important; } /*RV*/
 
+h4{
+  font-size: 1.5em;
+}
 p {
   margin-bottom: 1.5em; }
 
@@ -920,7 +923,7 @@ object {
   font-size: 1.066666em;
   }
   h4 {
-  font-size: 0.93333em;
+  font-size: 1.2em;
   }
   h5 {
   font-size: 0.8em;
