added featured slider template

--- a/style.css
+++ b/style.css
@@ -1059,6 +1059,77 @@ font-size: 0.9em;
 }
 
 /*--------------------------------------------------------------
+# FEATURED SLIDER
+--------------------------------------------------------------*/
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600);  
+
+
+
+#slider {
+  position: relative;
+  overflow: hidden;
+  height: 300px;
+  border-radius: 4px;
+  width: 100%;
+}
+
+#slider ul {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  height: 300px;
+  overflow: hidden;
+  list-style: none;
+  
+}
+
+#slider ul li {
+  position: relative;
+  display: inline;
+  float: left;
+  margin: 0;
+  padding: 0;
+  width: 25%;
+  height: 300px;
+  background: #ccc;
+  text-align: center;
+  line-height: 300px;
+}
+
+#slider a.control_prev, #slider a.control_next {
+  position: absolute;
+  top: 40%;
+  z-index: 999;
+  display: block;
+  padding: 4% 3%;
+  width: auto;
+  height: auto;
+  background: #2a2a2a;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 18px;
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+#slider a.control_prev:hover, #slider a.control_next:hover {
+  opacity: 1;
+  -webkit-transition: all 0.2s ease;
+}
+
+#slider a.control_prev {
+  border-radius: 0 2px 2px 0;
+}
+
+#slider a.control_next {
+  right: 0;
+  border-radius: 2px 0 0 2px;
+}
+
+
+/*--------------------------------------------------------------
 # CUSTOM (RV)
 --------------------------------------------------------------*/
 
