--- a/css/avicons.css
+++ b/css/avicons.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'avicons';
-	src:url('fonts/avicons.eot?cnz1ue');
-	src:url('fonts/avicons.eot?cnz1ue#iefix') format('embedded-opentype'),
-		url('fonts/avicons.ttf?cnz1ue') format('truetype'),
-		url('fonts/avicons.woff?cnz1ue') format('woff'),
-		url('fonts/avicons.svg?cnz1ue#avicons') format('svg');
+	src:url('fonts/avicons.eot?kmhg6p');
+	src:url('fonts/avicons.eot?kmhg6p#iefix') format('embedded-opentype'),
+		url('fonts/avicons.ttf?kmhg6p') format('truetype'),
+		url('fonts/avicons.woff?kmhg6p') format('woff'),
+		url('fonts/avicons.svg?kmhg6p#avicons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,11 +23,26 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.avicon-flickr:before {
+	content: "\e900";
+}
 .avicon-search:before {
 	content: "\e800";
 }
+.avicon-alert:before {
+	content: "\f02d";
+}
+.avicon-broadcast:before {
+	content: "\f048";
+}
+.avicon-file-media:before {
+	content: "\f012";
+}
 .avicon-info:before {
 	content: "\f059";
+}
+.avicon-radio-tower:before {
+	content: "\f030";
 }
 .avicon-av-calendar:before {
 	content: "\e600";
@@ -80,11 +95,17 @@
 .avicon-share2:before {
 	content: "\e628";
 }
+.avicon-mail4:before {
+	content: "\e901";
+}
 .avicon-youtube:before {
 	content: "\e801";
 }
 .avicon-tumblr2:before {
 	content: "\e802";
+}
+.avicon-soundcloud:before {
+	content: "\e902";
 }
 .avicon-soundcloud2:before {
 	content: "\e803";
@@ -110,8 +131,20 @@
 .avicon-instagram-with-circle:before {
 	content: "\e805";
 }
+.avicon-library_music:before {
+	content: "\e015";
+}
+.avicon-playlist_add:before {
+	content: "\e01e";
+}
+.avicon-queue_music:before {
+	content: "\e020";
+}
 .avicon-email:before {
 	content: "\e04c";
+}
+.avicon-speaker_phone:before {
+	content: "\e05b";
 }
 .avicon-folder:before {
 	content: "\e101";
@@ -161,6 +194,153 @@
 .avicon-view_carousel:before {
 	content: "\e2fd";
 }
+.avicon-number:before {
+	content: "\e903";
+}
+.avicon-number2:before {
+	content: "\e904";
+}
+.avicon-number3:before {
+	content: "\e905";
+}
+.avicon-number4:before {
+	content: "\e906";
+}
+.avicon-number5:before {
+	content: "\e907";
+}
+.avicon-number6:before {
+	content: "\e908";
+}
+.avicon-number7:before {
+	content: "\e909";
+}
+.avicon-number8:before {
+	content: "\e90a";
+}
+.avicon-number9:before {
+	content: "\e90b";
+}
+.avicon-number10:before {
+	content: "\e90c";
+}
+.avicon-number11:before {
+	content: "\e90d";
+}
+.avicon-number12:before {
+	content: "\e90e";
+}
+.avicon-number13:before {
+	content: "\e90f";
+}
+.avicon-number14:before {
+	content: "\e910";
+}
+.avicon-number15:before {
+	content: "\e911";
+}
+.avicon-number16:before {
+	content: "\e912";
+}
+.avicon-number17:before {
+	content: "\e913";
+}
+.avicon-number18:before {
+	content: "\e914";
+}
+.avicon-number19:before {
+	content: "\e915";
+}
+.avicon-number20:before {
+	content: "\e916";
+}
+.avicon-quote:before {
+	content: "\e917";
+}
+.avicon-quote2:before {
+	content: "\e918";
+}
+.avicon-tag:before {
+	content: "\e919";
+}
+.avicon-ipod:before {
+	content: "\e91a";
+}
+.avicon-microphone:before {
+	content: "\e91b";
+}
+.avicon-microphone2:before {
+	content: "\e91c";
+}
+.avicon-microphone3:before {
+	content: "\e91d";
+}
+.avicon-checkmark:before {
+	content: "\e91e";
+}
+.avicon-checkmark2:before {
+	content: "\e91f";
+}
+.avicon-cancel:before {
+	content: "\e920";
+}
+.avicon-cancel2:before {
+	content: "\e921";
+}
+.avicon-plus:before {
+	content: "\e922";
+}
+.avicon-plus2:before {
+	content: "\e923";
+}
+.avicon-minus:before {
+	content: "\e924";
+}
+.avicon-minus2:before {
+	content: "\e925";
+}
+.avicon-notice:before {
+	content: "\e926";
+}
+.avicon-notice2:before {
+	content: "\e927";
+}
+.avicon-cogs2:before {
+	content: "\e928";
+}
+.avicon-cog2:before {
+	content: "\e929";
+}
+.avicon-cassette:before {
+	content: "\e92a";
+}
+.avicon-headphones:before {
+	content: "\e92b";
+}
+.avicon-checkmark3:before {
+	content: "\e92c";
+}
+.avicon-cancel3:before {
+	content: "\e92d";
+}
+.avicon-position:before {
+	content: "\e92e";
+}
+.avicon-location:before {
+	content: "\e92f";
+}
+.avicon-radio:before {
+	content: "\e930";
+}
+.avicon-satellite:before {
+	content: "\e931";
+}
+.avicon-magnifier:before {
+	content: "\e932";
+}
+.avicon-moneybag:before {
+	content: "\e933";
+}
 .avicon-layout:before {
 	content: "\e602";
 }
@@ -203,9 +383,82 @@
 .avicon-layout14:before {
 	content: "\e60f";
 }
+.avicon-tools:before {
+	content: "\e934";
+}
 .avicon-comments:before {
 	content: "\e611";
+}
+.avicon-volume:before {
+	content: "\e935";
+}
+.avicon-volume2:before {
+	content: "\e936";
+}
+.avicon-volume3:before {
+	content: "\e937";
+}
+.avicon-stats:before {
+	content: "\e938";
+}
+.avicon-profile:before {
+	content: "\e939";
+}
+.avicon-envelope:before {
+	content: "\e93a";
+}
+.avicon-music:before {
+	content: "\e93b";
+}
+.avicon-info2:before {
+	content: "\e93c";
+}
+.avicon-rocket:before {
+	content: "\e93d";
+}
+.avicon-microphone4:before {
+	content: "\e93e";
+}
+.avicon-radio2:before {
+	content: "\e93f";
+}
+.avicon-alert2:before {
+	content: "\e940";
+}
+.avicon-atom:before {
+	content: "\e941";
+}
+.avicon-globe:before {
+	content: "\e942";
+}
+.avicon-globe2:before {
+	content: "\e943";
+}
+.avicon-shipping:before {
+	content: "\e944";
+}
+.avicon-compass:before {
+	content: "\e945";
+}
+.avicon-navigation:before {
+	content: "\e946";
+}
+.avicon-tags:before {
+	content: "\e947";
 }
 .avicon-heart2:before {
 	content: "\e613";
 }
+.avicon-heart:before {
+	content: "\e948";
+}
+.avicon-clipboard:before {
+	content: "\e949";
+}
+.avicon-clipboard2:before {
+	content: "\e94a";
+}
+.avicon-paperplane:before {
+	content: "\e94b";
+}
+
